build: Improve pom