@@ -118,15 +118,15 @@
           <compilerArgs>
             <arg>-XDignore.symbol.file</arg>
             <arg>--add-exports</arg>
-            <arg>javafx.graphics/com.sun.javafx.tk=javafx.swt</arg>
+            <arg>javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED</arg>
             <arg>--add-exports</arg>
-            <arg>javafx.graphics/com.sun.javafx.cursor=javafx.swt</arg>
+            <arg>javafx.graphics/com.sun.javafx.cursor=ALL-UNNAMED</arg>
             <arg>--add-exports</arg>
-            <arg>javafx.graphics/com.sun.glass.ui=javafx.swt</arg>
+            <arg>javafx.graphics/com.sun.glass.ui=ALL-UNNAMED</arg>
             <arg>--add-exports</arg>
-            <arg>javafx.graphics/com.sun.javafx.embed=javafx.swt</arg>
+            <arg>javafx.graphics/com.sun.javafx.embed=ALL-UNNAMED</arg>
             <arg>--add-exports</arg>
-            <arg>javafx.graphics/com.sun.javafx.stage=javafx.swt</arg>
+            <arg>javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED</arg>
           </compilerArgs>
         </configuration>
       </plugin>
@@ -209,6 +209,18 @@
               <charset>UTF-8</charset>
               <encoding>UTF-8</encoding>
               <docencoding>UTF-8</docencoding>
+              <additionalOptions>
+                <additionalOption>--add-exports</additionalOption>
+                <additionalOption>javafx.graphics/com.sun.glass.ui=javafx.swt</additionalOption>
+                <additionalOption>--add-exports</additionalOption>
+                <additionalOption>javafx.graphics/com.sun.javafx.cursor=javafx.swt</additionalOption>
+                <additionalOption>--add-exports</additionalOption>
+                <additionalOption>javafx.graphics/com.sun.javafx.embed=javafx.swt</additionalOption>
+                <additionalOption>--add-exports</additionalOption>
+                <additionalOption>javafx.graphics/com.sun.javafx.stage=javafx.swt</additionalOption>
+                <additionalOption>--add-exports</additionalOption>
+                <additionalOption>javafx.graphics/com.sun.javafx.tk=javafx.swt</additionalOption>
+              </additionalOptions>
               <additionalJOptions>
                 <additionalJOption>-Xdoclint:none</additionalJOption>
               </additionalJOptions>
